# swagger.json
@@ -13,13 +13,31 @@
   ],
   "host": "api.matheditor.ml",
   "paths": {
+    "/stats": {
+      "get": {
+        "tags": [
+          "Stats"
+        ],
+        "summary": "Get database statistics",
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Stats"
+            }
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        }
+      }
+    },
     "/auth/logout": {
       "get": {
         "tags": [
           "Auth"
         ],
         "summary": "Logout",
-        "description": "Logout",
         "responses": {
           "200": {
             "description": "Logout successful"
@@ -33,7 +51,6 @@
           "Users"
         ],
         "summary": "Get current user",
-        "description": "Get current user",
         "responses": {
           "200": {
             "description": "Current user or null if not logged in",
@@ -50,11 +67,6 @@
           "Users"
         ],
         "summary": "Get all the users",
-        "description": "Get all the users",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [],
         "responses": {
           "200": {
             "description": "successful operation",
@@ -77,7 +89,6 @@
           "Users"
         ],
         "summary": "Get a user by id",
-        "description": "Get a user by id",
         "parameters": [
           {
             "name": "id",
@@ -110,10 +121,6 @@
           "Users"
         ],
         "summary": "Update the user",
-        "description": "Update the user",
-        "produces": [
-          "application/json"
-        ],
         "parameters": [
           {
             "name": "id",
@@ -163,10 +170,6 @@
           "Users"
         ],
         "summary": "Delete the user",
-        "description": "Delete the user",
-        "produces": [
-          "application/json"
-        ],
         "parameters": [
           {
             "name": "id",
@@ -192,11 +195,6 @@
           "Documents"
         ],
         "summary": "Get all the documents",
-        "description": "Get all the documents",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [],
         "responses": {
           "200": {
             "description": "successful operation",
@@ -217,10 +215,6 @@
           "Documents"
         ],
         "summary": "Create a new document",
-        "description": "Create a new document",
-        "produces": [
-          "application/json"
-        ],
         "parameters": [
           {
             "in": "body",
@@ -252,10 +246,6 @@
           "Documents"
         ],
         "summary": "Get a document by id",
-        "description": "Get a document by id",
-        "produces": [
-          "application/json"
-        ],
         "parameters": [
           {
             "name": "id",
@@ -286,10 +276,6 @@
           "Documents"
         ],
         "summary": "Update the document",
-        "description": "Update the document",
-        "produces": [
-          "application/json"
-        ],
         "parameters": [
           {
             "name": "id",
@@ -329,10 +315,6 @@
           "Documents"
         ],
         "summary": "Delete the document",
-        "description": "Delete the document",
-        "produces": [
-          "application/json"
-        ],
         "parameters": [
           {
             "name": "id",
@@ -364,6 +346,29 @@
     }
   },
   "definitions": {
+    "Stats": {
+      "type": "object",
+      "properties": {
+        "numberOfUsers": {
+          "type": "integer"
+        },
+        "numberOfDocuments": {
+          "type": "integer"
+        },
+        "latestUsers": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/User"
+          }
+        },
+        "latestDocuments": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Document"
+          }
+        }
+      }
+    },
     "User": {
       "type": "object",
       "properties": {
